--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -72,6 +72,19 @@
   .hover:zoom:hover {
     transform: scale(1.05);
   }
+
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #4b5563;
+    border-radius: 9999px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #374151;
+  }
 }
 
 @layer base {
